--- a/style.css
+++ b/style.css
@@ -51,15 +51,22 @@ p{
   z-index: -1;
   
 }
+
+/* header ================================================*/
+#header{
+  padding: 10px;
+  margin: 10px;
+  height: 0vh;
+}
 /* section1 ================================================*/
 #section1{
-  min-height: 93.9vh;
+  height: 100vh;
   width: 100vw;
-  padding-top: 50px;
+  
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin: 0;
+  justify-content: center;
+  align-items: center;
+  
 }
 #titre{
   display: flex;
@@ -83,7 +90,7 @@ font-size: 150px;
 /* section2 ================================================*/
 
 #section2{
-  min-height: 93.9vh;
+  height: 100vh;
   width: 100vw;
   padding-top: 50px;
   background-color:rgb(251, 134, 0);
@@ -96,16 +103,40 @@ font-size: 150px;
 /* section3 ================================================*/
 
 #section3{
-  min-height: 93.9vh;
+  height: 100vh;
   width: 100vw;
   padding-top: 50px;
   background-color: rgb(0, 0, 0);
-  margin: 0;
+  display: flex; 
+  flex-wrap: wrap;   
+  justify-content: center; 
+
+} 
+
+#photoSection3{
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center; 
+  align-items: center;
+
 }
-*{
-  margin:0;
-  padding:0;
-}
+
+#photoBat,
+#photoBat2,
+#photoBat3 {
+  width: 40%; 
+  height: 100; 
+  margin: 10px; 
+} 
+#photoBat,
+#photoBat2,
+#photoBat3 {
+  width: 450px; 
+  height: 450px; 
+  display: block; 
+  margin: 15px auto;
+ }
 /* section4 ================================================*/
 
 #section4{
@@ -121,16 +152,38 @@ font-size: 150px;
 }
 /* section 5 ================================================*/
 
-#section5{
-  min-height: 93.9vh;
+/* SECTION 5 ================================================*/
+#section5 {
+  min-height: 100vh;
   width: 100vw;
   padding-top: 50px;
   background-color: rgb(0, 0, 0);
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-*{
-  margin:0;
-  padding:0;
+
+#photoSection5 {
+  display: flex;
+  flex-wrap: wrap;              
+  justify-content: center;      
+  align-items: center;         
+  gap: 20px;         
+  box-sizing: border-box;
+}
+#photoSection5 img {
+  width: 300px;                 
+  height: auto;                 
+  object-fit: cover;            
+  border-radius: 10px;          
+  transition: transform 0.3s;   
+}
+
+/* Petit effet au survol ==================================*/
+
+#photoSection5 img:hover {
+  transform: scale(1.05);
 }
 /* section 6 ================================================*/
 
@@ -149,4 +202,18 @@ font-size: 150px;
 #textInsta{
   color: black;
   
+}
+#logoInsta{
+  width:100px;
+  height: 100px;
+}
+#logolinkdin{
+  width:100px;
+  height: 100px;
+  border-radius: 100px;
+}
+#logotiktok{
+width:100px;
+  height: 100px;
+  border-radius: 150px;
 }
